# yasr

./: CMakeLists.txt
src/: main.cpp
src/gfx/: app.cpp  app.hpp  color.cpp  color.hpp  gfx.hpp  renderer.cpp  renderer.hpp  shaders.cpp
src/gfx/gl/: gl_core_3_2.cpp  gl_core_3_2.hpp
